# SurfaceDeformation

./: CMakeLists.txt  README.md  package.json
assets/engine/shaders/color_pipeline/: ColorPipeline.frag.hlsl  ColorPipeline.frag.spv  ColorPipeline.vert.hlsl  ColorPipeline.vert.spv
engine/bedrock/: BedrockMath.cpp  BedrockMath.hpp
engine/physics/: Collision.cpp  Collision.hpp
engine/render_system/: CMakeLists.txt
engine/render_system/camera/: ArcballCamera.cpp  ArcballCamera.hpp  PerspectiveCamera.hpp
engine/render_system/pipeline/: ColorPipeline.cpp  ColorPipeline.hpp
engine/render_system/utils/: LineRenderer.hpp
executables/bspline_app/: BSplineApp.cpp  BSplineApp.hpp  BSplineMain.cpp  CMakeLists.txt
executables/cc_subdivision/: CC_SubdivisionApp.cpp  CC_SubdivisionApp.hpp  CC_SubdivisionMain.cpp  CMakeLists.txt
shared/: BSplineCurve.cpp  BSplineCurve.hpp  CMakeLists.txt  Contribution.cpp  Contribution.hpp  ControlPoint.cpp  ControlPoint.hpp  CurtainMeshRenderer.cpp  CurtainMeshRenderer.hpp  Curve.cpp  Curve.hpp  Sampler.cpp  Sampler.hpp  Subdivision.cpp  Subdivision.hpp  SurfaceMesh.cpp  SurfaceMesh.hpp  SurfaceMeshRenderer.cpp  SurfaceMeshRenderer.hpp
